# canned-flows

./: pyproject.toml
canned_flows/: flow_deploy.py  flow_run.py  utils.py
canned_flows/move/demo/: definition.yml  deploy.py  run.py  sample-input.yml  schema.yml
canned_flows/move/generic/: definition.yml  deploy.py  run.py  sample-input.yml  schema.yml
canned_flows/transfer_with_permissions/demo/: definition.yml  deploy.py  run.py  sample-input.yml  schema.yml
canned_flows/transfer_with_permissions/generic/: definition.yml  deploy.py  run.py  sample-input.yml  schema.yml
tests/: test_canned_flows.py
